--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,41 @@
+AccessControl==4.0
+Acquisition==4.6
+AuthEncoding==4.1
+BTrees==4.5.1
+cffi==1.12.3
 Click==7.0
+DateTime==4.3
+ExtensionClass==4.4
 Flask==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+Persistence==3.0
+persistent==4.5.0
+pycparser==2.19
+python-gettext==4.0
+pytz==2019.1
+RestrictedPython==4.0
+six==1.12.0
+transaction==2.4.0
 Werkzeug==0.15.2
 WTForms==2.2.1
-RestrictedPython==4.0b8
+zExceptions==4.1
+zope.browser==2.3
+zope.component==4.5
+zope.configuration==4.3.1
+zope.contenttype==4.4
+zope.deferredimport==4.3
+zope.deprecation==4.4.0
+zope.event==4.4
+zope.exceptions==4.3
+zope.hookable==4.2.0
+zope.i18n==4.6.2
+zope.i18nmessageid==4.3.1
+zope.interface==4.6.0
+zope.location==4.2
+zope.proxy==4.3.1
+zope.publisher==5.0.1
+zope.schema==4.9.3
+zope.security==4.3.1
+zope.testing==4.7
