--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,45 @@
 AccessControl==4.0
 Acquisition==4.6
+aniso8601==6.0.0
+attrs==19.1.0
 AuthEncoding==4.1
 BTrees==4.5.1
+certifi==2019.3.9
 cffi==1.12.3
+chardet==3.0.4
 Click==7.0
 DateTime==4.3
 ExtensionClass==4.4
 Flask==1.0.2
+Flask-Kerberos==1.0.4
+Flask-Login==0.4.1
+Flask-RESTful==0.3.7
+flask-restplus==0.12.1
+Flask-SQLAlchemy==2.4.0
+gevent==1.4.0
+greenlet==0.4.15
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+jsonschema==3.0.1
+kerberos==1.3.0
+locustio==0.11.0
 MarkupSafe==1.1.1
+msgpack==0.6.1
 Persistence==3.0
 persistent==4.5.0
 pycparser==2.19
+pykerberos==1.2.1
+pyrsistent==0.15.2
 python-gettext==4.0
 pytz==2019.1
+pyzmq==18.0.1
+requests==2.22.0
 RestrictedPython==4.0
 six==1.12.0
+SQLAlchemy==1.3.3
 transaction==2.4.0
+urllib3==1.25.2
 Werkzeug==0.15.2
 WTForms==2.2.1
 zExceptions==4.1
@@ -39,5 +61,3 @@ zope.publisher==5.0.1
 zope.schema==4.9.3
 zope.security==4.3.1
 zope.testing==4.7
-pykerberos==1.2.1
-Flask-Kerberos==1.0.4
